--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,4 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/tesis.sqlite3
-  pool: 5
-  timeout: 5000
+  url: <%= ENV['DATABASE_URL'] %>
