--- a/config/database.yml
+++ b/config/database.yml
@@ -1,19 +1,23 @@
 # SQLite version 3.x
 #   gem install sqlite3
 development:
-  adapter: sqlite3
-  database: db/tesis.sqlite3
+  adapter: postgresql
+  encoding: utf8
+  database: wedraw
   pool: 5
-  timeout: 5000
+  username: postgres
+  password: lap
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/tesis.sqlite3
+  adapter: postgresql
+  encoding: utf8
+  database: wedraw 
   pool: 5
-  timeout: 5000
+  username: postgres
+  password: lap
 
 production:
   url: <%= ENV['DATABASE_URL'] %>
