--- a/config/database.yml
+++ b/config/database.yml
@@ -2,7 +2,8 @@
 #   gem install sqlite3
 development:
   adapter: postgresql
-  encoding: utf8
+  encoding: unicode
+  host: tesis.ana
   database: wedraw
   pool: 5
   username: postgres
@@ -13,7 +14,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  encoding: utf8
+  encoding: unicode
   database: wedraw 
   pool: 5
   username: postgres
